...
    <string name="notifications">Notifications</string>
    <string name="profile_text">Your profile</string>
    <string name="logout">Log out</string>
    <string name="seeyou">See you soon !</string>
    <string name="logged_in_screen">You successfully logged in !</string>
    <string name="logo">splash screen logo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_logged_in__screen">Logged_in_Screen</string>
    <string name="confirmationSent">Please check your e-mails to confirm your inscription.</string>
    <string name="resetPassword">Reset password</string>
    <string name="resendConfirmation">Resend confirmation.</string>
    <string name="favorPosterDetailViewTitle">Who is the poster?</string>
...
